// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders base CSS and HTML attributes correctly 1`] = `
.c0 {
  display: inline-block;
  border-radius: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-transition-property: background,color,border,outline;
  transition-property: background,color,border,outline;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  border: 1px solid transparent;
  line-height: calc(2.5rem - 2px);
  font-size: 1rem;
  padding: 0 1rem;
}

.c0,
.c0:visited {
  background: #39444d;
  color: #ffffff;
}

.c0:not([disabled]):hover,
.c0:visited:not([disabled]):hover {
  background: #2c353d;
  color: #ffffff;
}

<button
  class="c0"
  type="button"
>
  Test
</button>
`;

exports[`Button renders button states deprecated prop - primary 1`] = `
<Styled(Box)
  as="button"
  buttonColor="blue"
  className=""
  type="button"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states destructive 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  type="button"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states disabled 1`] = `
<Styled(Box)
  as="button"
  className=""
  disabled={true}
  type="button"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states external button 1`] = `
<Styled(Box)
  as="button"
  className=""
  type="button"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states external to without component 1`] = `
<Styled(Box)
  as="a"
  className=""
  href="/nocomp"
  rel="noopener noreferrer"
  target="_blank"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat 1`] = `
<Styled(Box)
  as="button"
  className=""
  type="button"
  visualSize="default"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat with color 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  type="button"
  visualSize="default"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states flat with color and disabled 1`] = `
<Styled(Box)
  as="button"
  buttonColor="red"
  className=""
  disabled={true}
  type="button"
  visualSize="default"
  visualWeight="weak"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states fullWidth 1`] = `
<Styled(Box)
  as="button"
  className=""
  fullWidth={true}
  type="button"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states large size 1`] = `
<Styled(Box)
  as="button"
  className=""
  type="button"
  visualSize="large"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states outline enabled 1`] = `
<Styled(Box)
  as="button"
  className=""
  type="button"
  visualSize="default"
  visualWeight="normal"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states submit 1`] = `
<Styled(Box)
  as="button"
  className=""
  type="submit"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to while disabled 1`] = `
<Styled(Box)
  as={[Function]}
  className=""
  disabled={true}
  to="/withcomp"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to with component 1`] = `
<Styled(Box)
  as={[Function]}
  className=""
  to="/withcomp"
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;

exports[`Button renders button states to without component 1`] = `
<Styled(Box)
  as="a"
  className=""
  href="/nocomp"
  rel=""
  target=""
  visualSize="default"
  visualWeight="strong"
>
  Hola!
</Styled(Box)>
`;
